# sentinel-data-fusion

./: Dockerfile  JenkinsConstants.groovy  LICENSE  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.sqa/: Dockerfile.override  config.yml  docker-compose.yml
api/: __init__.py  config.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-sentinel_data_fusion_start.ipynb
sentinel_data_fusion/: README.md  __init__.py  api.py  config.py  misc.py  utils.py
sentinel_data_fusion/wq_sat/: config.py  credentials.yaml  regions.yaml
sentinel_data_fusion/wq_sat/satellites/: atcor.py  download_sentinel.py  sentinel2.py  sentinel3.py
sentinel_data_fusion/wq_sat/techniques/: networks.py  patches.py  test_models.py  traditional_techniques.py  train_networks.py
sentinel_data_fusion/wq_sat/utils/: data_utils.py  gdal_utils.py  metrics_utils.py  model_utils.py  preprocessing_utils.py  sat_utils.py
tests/: README.md  test_api.py
tests/test_metadata/: test_requirements.py
