[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-data-fusion"
authors = [
    { name = "Fernando Aguilar Gómez (IFCA-CSIC)", email = "aguilarf@ifca.unican.es" },
    { name = "María Peña (IFCA-CSIC)", email = "penam@ifca.unican.es" },
    { name = "Daniel García Díaz (IFCA-CSIC)", email = "garciad@ifca.unican.es" },
]
description = "Fusion of Sentinel-2 and Sentinel-3 data to improve Sentinel-3 spatial resolution"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/sentinel-data-fusion"
"Bug Tracker" = "https://github.com/ai4os-hub/sentinel-data-fusion/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "SENTINEL_DATA_FUSION_DATA_PATH=tests/data",
    "SENTINEL_DATA_FUSION_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [
    "sentinel_data_fusion",
    "sentinel_data_fusion.api",
]

[tool.setuptools.package-dir]
"sentinel_data_fusion.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
sentinel_data_fusion = "sentinel_data_fusion.api"
